--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -7,7 +7,9 @@ env:
   DEBUG: 1
   TEST: 1
 
-  MONGO_URL: ${{ secrets.MONGO_URL }}
+  MONGO_URL: 'mongodb://localhost:27017/'
+
+  DIR_CHECK: 'controllers endpoints responses api.py env_var.py error.py main.py'
 
 jobs:
   code-style:
@@ -29,23 +31,23 @@ jobs:
       - name: 'Install dependencies'
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-env.txt
+          pip install -r requirements-dev.txt
 
       - name: '`flake8` - error check'
         run: |
-          flake8 . --config .flake8-error --benchmark
+          flake8 $DIR_CHECK --config .flake8-error --benchmark
 
       - name: '`flake8` - style check'
         run: |
-          flake8 . --config .flake8-style --benchmark
+          flake8 $DIR_CHECK --config .flake8-style --benchmark
 
       - name: '`pydocstyle`'
         run: |
-          pydocstyle --count
+          pydocstyle $DIR_CHECK --count
 
       - name: '`pylint`'
         run: |
-          pylint
+          pylint $DIR_CHECK
 
   ci-test:
     name: CI Tests
@@ -66,7 +68,17 @@ jobs:
       - name: 'Install dependencies'
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-env.txt
+          pip install -r requirements-dev.txt
+
+      - name: 'Use Node.js 12.x'
+        uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+
+      - name: 'Start MongoDB 4.2'
+        uses: supercharge/mongodb-github-action@1.3.0
+        with:
+          mongodb-version: '4.2'
 
       - name: 'Run `pytest`'
         run: |
