ADD - Sync with RaenonX-DL/dragalia-site-front@86e8f2ccb4cf3ed3c1b1da5ae8154b29c64df2c0 (v1.1.0)
Signed-off-by: RaenonX <raenonx0710@gmail.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -16,6 +16,8 @@ include-naming-hint=yes
 
 [SIMILARITIES]
 
+min-similarity-lines=10
+
 # Ignore imports when computing similarities
 ignore-imports=yes
 
